@@ -28,7 +28,7 @@ public class BehandleTpsResponsTest {
     public void privateConstructorCannotBeCalled() throws Exception {
 
         Class clas = Class.forName("no.nav.tps.forvalteren.service.command.testdata.utils.BehandleTpsRespons");
-        clas.newInstance();
+        clas.getDeclaredConstructor().newInstance();
     }
 
     @Test
