@@ -19,7 +19,7 @@ public class ConvertStringToDateTest {
     @Test(expected = IllegalAccessException.class)
     public void callConstructorFails() throws  Exception{
         Class clazs = getClass().getClassLoader().loadClass("no.nav.tps.forvalteren.service.command.tps.skdmelding.skdparam.utils.ConvertStringToDate");
-        clazs.newInstance();
+        clazs.getDeclaredConstructor().newInstance();
     }
 
     @Test
